helm/charts/booklore/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklore
  labels:
    app: booklore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booklore
  template:
    metadata:
      labels:
        app: booklore
    spec:
      containers:
        - name: booklore
          image: docker.io/booklore/booklore:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          volumeMounts:
            - mountPath: /app/data
              name: booklore-data
            - mountPath: /books
              name: booklore-books
            - mountPath: /bookdrop
              name: booklore-bookdrop
      volumes:
        - name: booklore-data
          persistentVolumeClaim:
            claimName: booklore-data
        - name: booklore-books
          persistentVolumeClaim:
            claimName: booklore-books
        - name: booklore-bookdrop
          persistentVolumeClaim:
            claimName: booklore-bookdrop
